modules/gdscript/tests/scripts/analyzer/errors/immutable_local_attempt_to_modify.gd
func test():
	let immutable_local = 1.0

	immutable_local = 0.0
